--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/29.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Zoom pegasus 33</p>
-											<h4>$20.00 <span>$22.00</span></h4>
+											<h4>$20.00 <span></span></h4>
 										</div>
 										<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -77,7 +77,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/31.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Zoom Pegasus 32</p>
-											<h4>$14.00 <span>$21.00</span></h4>
+											<h4>$14.00 <span></span></h4>
 										</div>
 											<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -98,7 +98,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/32.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Zoom Running shoes</p>
-											<h4>$26.00 <span>$27.00</span></h4>
+											<h4>$26.00 <span></span></h4>
 										</div>
 										<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -122,7 +122,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/9.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Zoom Pegasus 32</p>
-											<h4>$12.00 <span>$13.00</span></h4>
+											<h4>$12.00 <span></span></h4>
 										</div>
 										<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -142,7 +142,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/11.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Boost</p>
-											<h4>$16.00 <span>$18.00</span></h4>
+											<h4>$16.00 <span></span></h4>
 										</div>
 										<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -161,7 +161,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/11.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Boost</p>
-											<h4>$16.00 <span>$18.00</span></h4>
+											<h4>$16.00 <span></span></h4>
 										</div>
 										<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -186,7 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/33.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Air Maxx</p>
-											<h4>$15.00 <span>$17.00</span></h4>
+											<h4>$15.00 <span></span></h4>
 										</div>
 											<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -207,7 +207,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/34.png" alt=" " class="img-responsive" /></a>
 											<p>Nike sports shoes</p>
-											<h4>$14.00 <span>$15.00</span></h4>
+											<h4>$14.00 <span></span></h4>
 										</div>
 											<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
@@ -226,7 +226,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/35.png" alt=" " class="img-responsive" /></a>
 											<p>Nike Casual shoes</p>
-											<h4>$11.00 <span>$15.00</span></h4>
+											<h4>$11.00 <span></span></h4>
 										</div>
 											<input type="submit" name="submit" value="Add to cart" class="button" />
 									</div>
